#ifndef DATAITERATOR_H
#define DATAITERATOR_H

class DataIterator
{
public:
	DataIterator() = default;
	~DataIterator() = default;
};

#endif // !DATAITERATOR_H
