#ifndef DECODE_CONTEXT_H
#define DECODE_CONTEXT_H

class DecodeContext
{
public:
	DecodeContext() = default;
	~DecodeContext() = default;
};
#endif // !DECODE_CONTEXT_H
