#ifndef IOBS_DECODER_H
#define IOBS_DECODER_H
class IObsDecoder
{
public:
	IObsDecoder() = default;
	~IObsDecoder() = default;

};
#endif // !IOBS_DECODER_H
