#ifndef NOV_DECODE_CONTEXT
#define NOV_DECODE_CONTEXT
#include "DecodeContext.h"
class NovDecodeContext :public DecodeContext
{
public:
	NovDecodeContext() = default;
	~NovDecodeContext() = default;
};

#endif // !NOV_DECODE_CONTEXT
