#ifndef NOV_OEM_7_DECODER_H
#define NOV_OEM_7_DECODER_H
#include "IObsDecoder.h"
class NovOem7Decoder : public IObsDecoder
{
public:
	NovOem7Decoder() = default;
	~NovOem7Decoder() = default;
};
#endif // !NOV_OEM_7_DECODER_H
