#ifndef SATELLITE_DATABASE_H
#define SATELLITE_DATABASE_H
class SatelliteDataBase
{
public:
	SatelliteDataBase() = default;
	~SatelliteDataBase() = default;
};
#endif // !SATELLITE_DATABASE_H
